test/error/LexResourceSyntax2.fu
public static class Test
{
	public static bool Run()
	{
		byte[] a = resource<int[]>("foo"); //ERROR: Expected 'resource<byte[]>' //ERROR: Expected ';', got identifier //ERROR: Invalid expression //ERROR: Useless expression //ERROR: Expected ';', got '>' //ERROR: Useless expression
		return true;
	}
}
